--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App{
+  background: linear-gradient(0deg, rgba(117,179,211,1) 0%, rgba(27,27,28,1) 100%);
+  width: 100%;
+  height: 100vh;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.outerbox{
+  width: 100%;
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
 }
-
-.App-link {
-  color: #61dafb;
+.heading{
+  text-align: center;
+  color: whitesmoke;
+  margin-top: 0px ;
 }
+.centerbox{
+  width: 350px;
+  height: 350px;
+  border: 4px solid black;
+  border-radius: 20px;
+  background-color: black;
+}
+.but{
+  display: flex;
+justify-content: center;
+gap: 10px;
+margin-top: 10px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.but input{
+  flex-basis: 70%;
+  padding: 10px;
+}
+.but button{
+  flex-basis: 15%;
+  padding: 10px;
+}
+.passlength{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  color:whitesmoke;
+}
+.passlength input{
+  padding: 10px;
+  width: 30%;
+}
+.btn{
+  width: 95%;
+  padding: 10px;
+  margin-left: 10px;
+  margin-top: 20px;
+  cursor: pointer;
 }
